--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dotenv": "4.0.0",
     "express-handlebars": "3.0.0",
     "handlebars": "4.0.6",
+    "json-2-csv": "^2.3.1",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
     "moment": "2.17.1",
+    "node-fetch": "^2.2.0",
     "stylus": "0.54.5"
   },
   "devDependencies": {
